fix dark mode in homepage

--- a/src/theme/dark/_smui-theme.scss
+++ b/src/theme/dark/_smui-theme.scss
@@ -25,3 +25,8 @@ a {
 a:visited {
   color: color.scale(#40b3ff, $lightness: -35%);
 }
+
+.homepage-container {
+  background-color: theme.$primary;
+  color: #000;
+}
